# ProjectsCpp

./: CMakeLists.txt  README.md
01_Basics/: CMakeLists.txt
01_Basics/01_Volume/: 1_volume.cpp  README.md
01_Basics/02_Diet/: 2_diet.cpp  README.md
01_Basics/03_Sales_Profit_Increase/: 3_sales_profit.cpp  README.md
01_Basics/04_Loan/: 4_loan.cpp  README.md
01_Basics/05_Truck_capacity/: 5_truck_capacity.cpp  README.md
01_Basics/06_Cab_fare/: 6_cab_fare.cpp  README.md
01_Basics/07_Calories_deficit/: 7_calories_deficit.cpp  README.md
01_Basics/08_Babylonian_algorithm/: 8_babylonian_algorithm.cpp  README.md
01_Basics/09_Arcade_prize/: 9_Arcade_prize.cpp  README.md
01_Basics/10_Plane_distance/: 10_Plane_distance.cpp  README.md
01_Basics/11_Time/: 11_Time.cpp  README.md
01_Basics/12_BMI/: 12_BMI.cpp  README.md
01_Basics/13_Coffee_intake/: 13_Coffee_intake.cpp  README.md
02_Flow_of_Control/: CMakeLists.txt
02_Flow_of_Control/2.01_Apartment_price/: 1_Apartement_price.cpp  README.md
02_Flow_of_Control/2.02_Interests_deposit/: 2_Interests_deposit.cpp  README.md
02_Flow_of_Control/2.03_Financing_education/: 3_Financing_education.cpp  README.md
02_Flow_of_Control/2.04_Prime_numbers/: 4_Prime_numbers.cpp  README.md
02_Flow_of_Control/2.05_Cryptarithmetic_puzzle/: 5_Cryptarithmetic_puzzle.cpp  5_extra_Cryptarithmetic_puzzle2.cpp  README.md
02_Flow_of_Control/2.06_Buoyancy/: 6_Buoyancy.cpp  README.md
02_Flow_of_Control/2.07_GPA/: 7_GPA.cpp  README.md
02_Flow_of_Control/2.08_Equivalent_Temperatures/: 8_Equivalent_temperatures.cpp  README.md
02_Flow_of_Control/2.09_Babylonian_cyclic/: 9_Babylonian_cyclic.cpp  README.md
02_Flow_of_Control/2.10_Text_replacement/: 10_Text_replacement.cpp  README.md
02_Flow_of_Control/2.11_Ideal_BMI/: 11_Ideal_BMI.cpp  README.md
02_Flow_of_Control/2.12_Benfords_Law/: 12_Benfords_Law.cpp  README.md
02_Flow_of_Control/2.13_Pair_sum/: 13_Pair_sum.cpp  README.md
03_Function/: CMakeLists.txt
03_Function/3.01_File_size/: 1_File_size.cpp  README.md
03_Function/3.02_Salary_hike/: 2_Salary_hike.cpp  README.md
03_Function/3.03_Future_salary_hike/: 3_Future_Salary_hike.cpp  README.md
03_Function/3.04_Gravitational_force/: 4_Gravitational_force.cpp  README.md
03_Function/3.05_Clothing_size/: 5_Clothing_size.cpp  5_Clothing_size_old_code_repetition.cpp  README.md
03_Function/3.06_Scores_statistics/: 6_Scores_statistics.cpp  README.md
03_Function/3.07_Euclidean_distance/: 7_Euclidean_distance.cpp  README.md
03_Function/3.08_Bottles_beer/: 8_Bottles_bear.cpp  README.md
03_Function/3.09_Game_of_craps/: 9_Game_of_craps.cpp  README.md
03_Function/3.10_Estimated_height/: 10_Estimated_height.cpp  README.md
03_Function/3.11_Game_of_Pig/: 11_Game_of_Pig.cpp  README.md
03_Function/3.12_Day_from_date/: 12_Day_from_date_map.cpp  12_Day_from_date_switch.cpp  README.md
03_Function/3.13_Price_Winners_Lottery/: 13_Price_Winners_Lottery_swap.cpp  13_Price_Winners_Lottery_with_flag.cpp  README.md
03_Function/3.14_Babylonian_square_root/: 14_Babylonian_square_root.cpp  README.md
03_Function/3.15_Likelihood_death/: 15_Likelihood_death.cpp  README.md
04_Parameters_Overloading/: CMakeLists.txt
04_Parameters_Overloading/4.01_Hour_Conversion/: 1_Hour_Conversion.cpp  README.md
04_Parameters_Overloading/4.02_Area_Circumference/: 2_Area_Circumference.cpp  README.md
04_Parameters_Overloading/4.03_Redeem_Voucher/: 3_Redeem_Voucher.cpp  README.md
04_Parameters_Overloading/4.04_Feet_Inches_to_Meters/: 4_Feet_Inches_to_Meters.cpp  README.md
04_Parameters_Overloading/4.05_Meters_to_Feet_Inches/: 5_Meters_to_Feet_Inches.cpp  README.md
04_Parameters_Overloading/4.06_Length_Conversion/: 6_Length_Conversion.cpp  README.md
04_Parameters_Overloading/4.07_Pounds_Ounces_to_Grams/: 7_Pounds_Ounces_to_Grams.cpp  README.md
04_Parameters_Overloading/4.08_Grams_to_Pounds_Ounces/: 8_Grams_to_Pounds_Ounces.cpp  README.md
04_Parameters_Overloading/4.09_Weight_Conversion/: 9_Weight_Conversion.cpp  README.md
04_Parameters_Overloading/4.10_Length_Weight_Conversion/: 10_Length_Weight_Conversion.cpp  README.md
04_Parameters_Overloading/4.11_Monty_Hall_Problem/: 11_Monty_Hall_Problem.cpp  README.md
04_Parameters_Overloading/4.12_Three_Way_Duel/: 12_Three_Way_Duel.cpp  README.md
04_Parameters_Overloading/4.13_Treadmill_Pace/: 13_Treadmill_Pace.cpp  README.md
04_Parameters_Overloading/4.14_Time_Difference/: 14_Time_Difference.cpp  README.md
04_Parameters_Overloading/4.15_Convert_Lowest_Terms/: 15_Convert_Lowest_Terms.cpp  README.md
04_Parameters_Overloading/4.16_Highest_Score/: 16_Highest_Score.cpp  README.md
04_Parameters_Overloading/4.17_Get_Score_Average_Score/: 17_Get_Score_Average_Score.cpp  README.md
04_Parameters_Overloading/4.18_Sorting_Trivial_Quick_Merge/: 18_Sorting_Trivial_Quick_Merge.cpp  README.md
05_Arrays/: CMakeLists.txt
05_Arrays/5.01_Graph_Car_Mileage/: 01_Graph_Car_Mileage.cpp  README.md
05_Arrays/5.02_Delete_Repeated_Characters/: 02_Delete_Repeated_Characters.cpp  README.md
05_Arrays/5.03_Standard_Deviation/: 03_Standard_Deviation.cpp  README.md
05_Arrays/5.04_Vowels_Count/: 04_Vowels_Count.cpp  README.md
05_Arrays/5.05_Integer_Overflow_Sum_With_Arrays/: 05_Integer_Overflow_Sum_With_Arrays.cpp  README.md
05_Arrays/5.06_Contest_Score/: 06_Contest_Score.cpp  README.md
05_Arrays/5.07_Histogram_Grades/: 07_Histogram_Grades.cpp  README.md
05_Arrays/5.08_Birthday_Paradox/: 08_Birthday_Paradox.cpp  README.md
05_Arrays/5.09_Tic_Tac_Toe/: 09_Tic_Tac_Toe.cpp  README.md
05_Arrays/5.10_Ice_Cream_Parlor/: 10_Ice_Cream_Parlor.cpp  README.md
05_Arrays/5.11_Histogram_Production/: 11_Histogram_Production.cpp  README.md
05_Arrays/5.12_Game_of_Life/: 12_Game_of_Life.cpp  README.md
05_Arrays/5.13_Memory_Matching_Cards/: 13_Memory_Matching_Cards.cpp  README.md
06_Structures_Classes/: CMakeLists.txt
07_Constructors_Other_Tools/: CMakeLists.txt
11_Separate_Compilation_Namespaces/: CMakeLists.txt
14_Inheritance/: CMakeLists.txt
15_Polymorphism_Virtual_functions/: CMakeLists.txt
(+314 files in other folders)
