# CMakeList.txt : CMake project, include source and define
# project specific logic here.
#

# Add source to this project's executable.
# add_executable ()

# Multi-source examples live in their own subfolders with local CMakeLists.txt
add_subdirectory ("14.01_Administrator")

# TODO: Add tests and install targets if needed.