# CMakeList.txt : CMake project, include source and define
# project specific logic here.
#

# Add source to this project's executable.
# add_executable ()

# Multi-source examples live in their own subfolders with local CMakeLists.txt
add_subdirectory ("14.01_Administrator")
add_subdirectory ("14.02_Menu_Has_A_relationship")
add_subdirectory ("14.03_Doctor")
add_subdirectory ("14.04_Student")
add_subdirectory ("14.05_EMS")

# TODO: Add tests and install targets if needed.