# CMakeList.txt : CMake project, include source and define
# project specific logic here.
#

# Add source to this project's executable.
# add_executable ()

# Multi-source examples live in their own subfolders with local CMakeLists.txt
add_subdirectory ("15.01_Graph")
add_subdirectory ("15.02_Graph_Visualisation")
add_subdirectory ("15.03_Predator_Pray_Simulation")


# TODO: Add tests and install targets if needed.